--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.6.2",
     "colors": "^1.4.0",
     "discord.js": "^14.14.1",
+    "dotenv": "^16.3.1",
     "glob": "^8.0.3",
     "jimp": "^0.22.10",
     "mongoose": "^8.0.2",
