Change file <package.json> Update name bot into EN

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "きなこ",
+  "name": "kinako",
   "version": "1.0.0",
   "description": "Bot multi-fonctionnel pour Discord.",
   "main": "index.js",
