--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST = db-buf-05.sparkedhost.us
+DB_HOST = db-lon-01.sparkedhost.us
 DB_PORT =3306
-DB_USER =u109249_TPbYckVmwP
-DB_PASS =jUwFm4LqoahikI18p!@xbKTz
+DB_USER =u109249_vDap33hYOA
+DB_PASS =LsY@4RbUOyQd38PIr.y+Pz4R
 DB_NAME=s109249_kinakodb
